Updated to version 21 of the LEADTOOLS SDK

--- a/BarcodeMainDemo/packages.BarcodeMainDemo_4_Nuget.config
+++ b/BarcodeMainDemo/packages.BarcodeMainDemo_4_Nuget.config
@@ -1,16 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Leadtools.Barcode" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.CommonDialogs.WinForms" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Image.Processing" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Kernel" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Twain" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Viewer.Controls.WinForms" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Formats.Document" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Formats.Raster.Additional" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Formats.Raster.Camera" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Formats.Raster.Common" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Formats.Vector" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Jpeg2000" version="20.0.0.6" targetFramework="net40" />
-  <package id="Leadtools.Pdf" version="20.0.0.6" targetFramework="net40" />
+  <package id="Leadtools.Barcode" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.CommonDialogs.WinForms" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Image.Processing" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Kernel" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Twain" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Viewer.Controls.WinForms" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Dicom" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Formats.Document" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Formats.Raster.Additional" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Formats.Raster.Camera" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Formats.Raster.Common" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Formats.Vector" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Jpeg2000" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Mrc" version="21.0.0.2" targetFramework="net40" />
+  <package id="Leadtools.Pdf" version="21.0.0.2" targetFramework="net40" />
 </packages>
